--- a/style1.css
+++ b/style1.css
@@ -10,14 +10,17 @@
     display: inline-flex;
 }
 .menu a{
+    text-decoration: none;
     padding: 5px 20px;
     background: #ff4d73;
     color: #fff;
+    border: 1px solid #ff4d73;
     font-size: 16px;
-    border: 0;
+    
     position: absolute;
     right: 2%;
     top: 5%;
+    transition: .5s;
 }
 .banner-text{
     width: 80%;
@@ -37,6 +40,9 @@
     margin: auto;
     background: #ff4d73;
     transition: .5s;
+}
+.menu a:hover{
+    background: transparent;
 }
 .banner-text a:hover{
     background: transparent;
@@ -143,8 +149,8 @@
     margin-bottom: 50px;
 }
 .con{
-    background-color: rgb(8, 7, 7);
-    color: #fff;
+    background-color: rgb(243, 179, 179);
+    color: rgb(47, 2, 77);
 }
 .con h1{
     margin-top: 10px;
