--- a/style1.css
+++ b/style1.css
@@ -9,6 +9,41 @@
 .menu{
     display: inline-flex;
 }
+#abc{
+    width:100%;
+    height:100vh;
+    background-image: url(img2.jpg);
+    background-size: cover;
+  }
+  nav{
+    width: 100%;
+    height: 50px;
+    background-color: #0005;
+    line-height: 50px;
+  }
+  nav ul{
+    float: right;
+    margin-right: 30px;
+  }
+  nav ul li{
+    list-style-type: none;
+    display: inline-block;
+    transition: 0.7s all;
+  }
+  nav ul li a:hover{
+    background: transparent;
+  }
+  nav ul li a{
+    text-decoration: none;
+    padding: 5px 20px;
+    background: #ff4d73;
+    color: #fff;
+    font-size: 16px;
+    border: 1px solid #ff4d73;
+    right: 10%;
+    top: 5%;
+    transition: .5s;
+  }
 .menu a{
     text-decoration: none;
     padding: 5px 20px;
@@ -60,7 +95,7 @@
     width: 100%;
 }
 .container{
-    width: 1100;
+    width: 1100px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -75,8 +110,8 @@
     background: #fff;
     padding: 100px 40px 60px;
     box-shadow: 0 20px 50px rgb(0, 0, 0);
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .container .box::before{
     content:'';
