--- a/style1.css
+++ b/style1.css
@@ -1,10 +1,15 @@
+body{
+    filter: brightness(100%);
+}
 .header .content-box{
     background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(home_page.jpg);
+    background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.01) 0%, rgba(255, 255, 255, 0.01) 100%), url(home_page.jpg);
+
     background-position: center;
     background-size: cover;
     width: 100%;
     height: 100%;
-
+    filter: brightness(100%);
 }
 .menu{
     display: inline-flex;
